Prevent multi-line wrap on dist name/logotype/GitHub icon on mobile

--- a/mojo-app/public/sass/main.scss
+++ b/mojo-app/public/sass/main.scss
@@ -81,13 +81,15 @@ table.dataTable {
     }
 
     .name {
+        white-space: nowrap;
+
         a, i {
             vertical-align: middle;
             line-height: 32px;
         }
 
         .sprite {
-            float: right;
+            margin-left: 5px;
         }
     }
     .github {
